--- a/css/style.scss
+++ b/css/style.scss
@@ -75,6 +75,7 @@ body {
         img {
             width: 100%;
             border-radius: 50%;
+            border: 3px solid rgb(73, 197, 255);
         }
     }
 
