--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-image: url("../images/background-img.jpg");
+  background-image: url("/images/background-img.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
