--- a/css/style.scss
+++ b/css/style.scss
@@ -23,7 +23,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url("../images/background-img.jpg");
+    background-image: url("/images/background-img.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
