--- a/css/style.scss
+++ b/css/style.scss
@@ -10,7 +10,8 @@
 }
 
 ::selection {
-    background-color: rgb(0, 141, 129);
+    background-color: rgb(0, 161, 148);
+    color: rgb(255, 255, 255);
 }
 
 .container {
@@ -48,7 +49,7 @@ body {
         left: 37%;
         transform: translateX(-50%);
         width: 250px;
-        height: 225%;
+        height: 250%;
         background: linear-gradient(rgb(147, 255, 250), rgb(149, 255, 149));
         animation: anime 7s linear infinite;
     }
@@ -133,14 +134,14 @@ body {
                     width: 40px;
                     height: 40px;
                     border-radius: 50%;
+                    border: 1px solid rgba(255, 255, 255, 0);
                     display: flex;
                     justify-content: center;
                     align-items: center;
                     transition: 0.2s ease;
 
                     &:hover {
-                        background-color: rgb(211, 211, 211);
-                        color: #000000;
+                        border: 1px solid rgb(255, 255, 255);
                     }
                 }
             }
@@ -155,8 +156,11 @@ body {
         flex-direction: column;
 
         &::before {
-            top: -50%;
-            background: linear-gradient(rgb(51, 153, 148), rgb(226, 226, 226), rgb(0, 98, 179));
+            position: absolute;
+            top: -73%;
+            left: 30%;
+            transform: translateX(-50%);
+            background: linear-gradient(rgb(38, 255, 244),rgb(0, 80, 145));
         }
 
         .image__item {
@@ -212,11 +216,11 @@ body {
         padding: 10px;
     }
 
-    .card__box_items{
-        .info__item{
-            .social__pages{
-                .social_icons{
-                    a{
+    .card__box_items {
+        .info__item {
+            .social__pages {
+                .social_icons {
+                    a {
                         font-size: 18px;
                         width: 30px;
                         height: 30px;
