--- a/css/style.css
+++ b/css/style.css
@@ -1,325 +1,2 @@
-.card__box_items {
-    max-width: 300px
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    font-family: Poppins, sans-serif;
-    text-decoration: none
-}
-
-::-moz-selection {
-    background-color: #00a194;
-    color: #fff
-}
-
-::selection {
-    background-color: #00a194;
-    color: #fff
-}
-
-.container {
-    max-width: 1400px;
-    margin: 0 auto;
-    padding: 0 20px
-}
-
-body {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -moz-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -moz-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    background-image: url(/images/background-img.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    min-height: 100vh
-}
-
-.card__box_items {
-    position: relative;
-    max-width: 900px;
-    width: 100%;
-    padding: 40px;
-    border-radius: 20px;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
-    -moz-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -moz-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-column-gap: 100px;
-    -moz-column-gap: 100px;
-    column-gap: 100px;
-    overflow: hidden
-}
-
-.card__box_items::before {
-    content: "";
-    position: absolute;
-    left: 37%;
-    -webkit-transform: translateX(-50%);
-    -moz-transform: translateX(-50%);
-    -ms-transform: translateX(-50%);
-    -o-transform: translateX(-50%);
-    transform: translateX(-50%);
-    width: 250px;
-    height: 250%;
-    background: -webkit-linear-gradient(#93fffa, #95ff95);
-    background: -moz-linear-gradient(#93fffa, #95ff95);
-    background: linear-gradient(#93fffa, #95ff95);
-    -webkit-animation: 7s linear infinite anime;
-    -moz-animation: 7s linear infinite anime;
-    animation: 7s linear infinite anime
-}
-
-@-webkit-keyframes anime {
-    0% {
-        -webkit-transform: rotate(0);
-        transform: rotate(0)
-    }
-
-    100% {
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg)
-    }
-}
-
-@-moz-keyframes anime {
-    0% {
-        -moz-transform: rotate(0);
-        transform: rotate(0)
-    }
-
-    100% {
-        -moz-transform: rotate(360deg);
-        transform: rotate(360deg)
-    }
-}
-
-@keyframes anime {
-    0% {
-        -webkit-transform: rotate(0);
-        -moz-transform: rotate(0);
-        -o-transform: rotate(0);
-        transform: rotate(0)
-    }
-
-    100% {
-        -webkit-transform: rotate(360deg);
-        -moz-transform: rotate(360deg);
-        -o-transform: rotate(360deg);
-        transform: rotate(360deg)
-    }
-}
-
-.card__box_items::after {
-    content: "";
-    position: absolute;
-    background-color: #03080d;
-    inset: 4px;
-    border-radius: 20px
-}
-
-.card__box_items .image__item {
-    max-width: 280px;
-    text-align: center;
-    z-index: 50
-}
-
-.card__box_items .image__item img {
-    width: 100%;
-    border-radius: 50%;
-    border: 3px solid #49c5ff
-}
-
-.card__box_items .info__item {
-    max-width: 370px;
-    margin: 0 auto;
-    z-index: 50
-}
-
-.card__box_items .info__item .name {
-    font-size: 25px;
-    font-weight: 700;
-    line-height: 30px;
-    margin-top: 15px;
-    letter-spacing: 1px;
-    color: #d3d3d3
-}
-
-.card__box_items .info__item .profession {
-    font-size: 17px;
-    color: rgba(230, 230, 230, .877);
-    font-weight: 300
-}
-
-.card__box_items .info__item .about__text {
-    margin-top: 30px;
-    font-size: 17px;
-    color: #e6e6e6;
-    line-height: 27px;
-    letter-spacing: 1px
-}
-
-.card__box_items .info__item .mail {
-    margin-top: 20px;
-    text-align: start;
-    color: #d3d3d3;
-    font-size: 17px
-}
-
-.card__box_items .info__item .mail .mail_icon {
-    color: #d3d3d3;
-    margin-right: 5px;
-    font-size: 17px
-}
-
-.card__box_items .info__item .social__pages {
-    margin-top: 20px
-}
-
-.card__box_items .info__item .social__pages .social_icons {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex
-}
-
-.card__box_items .info__item .social__pages .social_icons a {
-    font-size: 22px;
-    margin: 30px 5px;
-    color: #d3d3d3;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    border: 1px solid rgba(255, 255, 255, 0);
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -moz-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -moz-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-transition: .2s;
-    -o-transition: .2s;
-    -moz-transition: .2s;
-    transition: .2s
-}
-
-.card__box_items .info__item .social__pages .social_icons a:hover {
-    border: 1px solid #fff
-}
-
-@media screen and (max-width:850px) {
-    .card__box_items {
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -webkit-flex-direction: column;
-        -moz-box-orient: vertical;
-        -moz-box-direction: normal;
-        -ms-flex-direction: column;
-        flex-direction: column
-    }
-
-    .card__box_items::before {
-        position: absolute;
-        top: -73%;
-        left: 30%;
-        -webkit-transform: translateX(-50%);
-        -moz-transform: translateX(-50%);
-        -ms-transform: translateX(-50%);
-        -o-transform: translateX(-50%);
-        transform: translateX(-50%);
-        background: -webkit-linear-gradient(#26fff4, #005091);
-        background: -moz-linear-gradient(#26fff4, #005091);
-        background: linear-gradient(#26fff4, #005091)
-    }
-
-    .card__box_items .image__item {
-        max-width: 170px
-    }
-
-    .card__box_items .info__item,
-    .card__box_items .info__item .social__pages {
-        margin-top: 30px
-    }
-}
-
-@media screen and (max-width:450px) {
-    .card__box_items::before {
-        width: 150px
-    }
-
-    .card__box_items .info__item .name {
-        font-size: 20px;
-        line-height: 24px
-    }
-
-    .card__box_items .info__item .about_title {
-        font-size: 25px
-    }
-
-    .card__box_items .info__item .about__text {
-        font-size: 15px
-    }
-
-    .card__box_items .info__item .mail {
-        font-size: 14px
-    }
-
-    .card__box_items .info__item .social__pages {
-        margin-top: 30px
-    }
-
-    .card__box_items .image__item .profession {
-        font-size: 14px;
-        margin-top: 5px
-    }
-}
-
-@media screen and (max-width:390px) {
-    .card__box_items {
-        padding: 10px
-    }
-
-    .card__box_items .info__item .social__pages .social_icons a {
-        font-size: 18px;
-        width: 30px;
-        height: 30px
-    }
-}
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300; 400;700&display=swap');*{margin:0;padding:0;-moz-box-sizing:border-box;box-sizing:border-box;font-family:Poppins,sans-serif;text-decoration:none}::-moz-selection{background-color:#00a194;color:#fff}::selection{background-color:#00a194;color:#fff}.container{max-width:1400px;margin:0 auto;padding:0 20px}body{display:-webkit-box;display:-webkit-flex;display:-moz-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-webkit-justify-content:center;-moz-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-webkit-align-items:center;-moz-box-align:center;-ms-flex-align:center;align-items:center;background-image:url(/images/background-img.jpg);background-repeat:no-repeat;background-position:center;background-size:cover;min-height:100vh}.card__box_items{position:relative;max-width:900px;width:100%;padding:40px;border-radius:20px;display:-webkit-box;display:-webkit-flex;display:-moz-box;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-webkit-justify-content:space-between;-moz-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;-webkit-box-align:center;-webkit-align-items:center;-moz-box-align:center;-ms-flex-align:center;align-items:center;-webkit-column-gap:100px;-moz-column-gap:100px;column-gap:100px;overflow:hidden}.card__box_items::before{content:"";position:absolute;left:37%;-webkit-transform:translateX(-50%);-moz-transform:translateX(-50%);-ms-transform:translateX(-50%);-o-transform:translateX(-50%);transform:translateX(-50%);width:250px;height:250%;background:-webkit-linear-gradient(#93fffa,#95ff95);background:-moz-linear-gradient(#93fffa,#95ff95);background:linear-gradient(#93fffa,#95ff95);-webkit-animation:7s linear infinite anime;-moz-animation:7s linear infinite anime;animation:7s linear infinite anime}@-webkit-keyframes anime{0%{-webkit-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}@-moz-keyframes anime{0%{-moz-transform:rotate(0);transform:rotate(0)}100%{-moz-transform:rotate(360deg);transform:rotate(360deg)}}@keyframes anime{0%{-webkit-transform:rotate(0);-moz-transform:rotate(0);-o-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(360deg);-moz-transform:rotate(360deg);-o-transform:rotate(360deg);transform:rotate(360deg)}}.card__box_items::after{content:"";position:absolute;background-color:#03080d;inset:4px;border-radius:20px}.card__box_items .image__item{max-width:280px;text-align:center;z-index:50}.card__box_items .image__item img{width:100%;border-radius:50%;border:3px solid #49c5ff}.card__box_items .info__item{max-width:370px;margin:0 auto;z-index:50}.card__box_items .info__item .name{font-size:25px;font-weight:700;line-height:30px;margin-top:15px;letter-spacing:1px;color:#d3d3d3}.card__box_items .info__item .profession{font-size:17px;color:rgba(230,230,230,.877);font-weight:300}.card__box_items .info__item .about__text{margin-top:30px;font-size:17px;color:#e6e6e6;line-height:27px;letter-spacing:1px}.card__box_items .info__item .mail{margin-top:20px;text-align:start;color:#d3d3d3;font-size:17px}.card__box_items .info__item .mail .mail_icon{color:#d3d3d3;margin-right:5px;font-size:17px}.card__box_items .info__item .social__pages{margin-top:20px}.card__box_items .info__item .social__pages .social_icons{display:-webkit-box;display:-webkit-flex;display:-moz-box;display:-ms-flexbox;display:flex}.card__box_items .info__item .social__pages .social_icons a{font-size:22px;margin:30px 5px;color:#d3d3d3;width:40px;height:40px;border-radius:50%;border:1px solid rgba(255,255,255,0);display:-webkit-box;display:-webkit-flex;display:-moz-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-webkit-justify-content:center;-moz-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-webkit-align-items:center;-moz-box-align:center;-ms-flex-align:center;align-items:center;-webkit-transition:.2s;-o-transition:.2s;-moz-transition:.2s;transition:.2s}.card__box_items .info__item .social__pages .social_icons a:hover{border:1px solid #fff}@media screen and (max-width:850px){.card__box_items{-webkit-box-orient:vertical;-webkit-box-direction:normal;-webkit-flex-direction:column;-moz-box-orient:vertical;-moz-box-direction:normal;-ms-flex-direction:column;flex-direction:column}.card__box_items::before{position:absolute;top:-73%;left:30%;-webkit-transform:translateX(-50%);-moz-transform:translateX(-50%);-ms-transform:translateX(-50%);-o-transform:translateX(-50%);transform:translateX(-50%);background:-webkit-linear-gradient(#26fff4,#005091);background:-moz-linear-gradient(#26fff4,#005091);background:linear-gradient(#26fff4,#005091)}.card__box_items .image__item{max-width:170px}.card__box_items .info__item,.card__box_items .info__item .social__pages{margin-top:30px}}@media screen and (max-width:450px){.card__box_items::before{width:150px}.card__box_items .info__item .name{font-size:20px;line-height:24px}.card__box_items .info__item .about_title{font-size:25px}.card__box_items .info__item .about__text{font-size:15px}.card__box_items .info__item .mail{font-size:14px}.card__box_items .info__item .social__pages{margin-top:30px}.card__box_items .image__item .profession{font-size:14px;margin-top:5px}}@media screen and (max-width:390px){.card__box_items{padding:10px}.card__box_items .info__item .social__pages .social_icons a{font-size:18px;width:30px;height:30px}}
 /*# sourceMappingURL=style.css.map */
