--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,3 @@
-// Fonts
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap");
-
 * {
     margin: 0;
     padding: 0;
@@ -10,7 +7,7 @@
 }
 
 ::selection {
-    background-color: rgb(0, 161, 148);
+    background-color: rgb(0, 116, 19);
     color: rgb(255, 255, 255);
 }
 
@@ -21,20 +18,30 @@
 }
 
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     background-image: url("/images/background-img.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: .3s ease;
+
+    &.dark {
+        background-blend-mode: darken;
+        background-color: rgba(0, 0, 0, 0.699);
+        cursor: pointer;
+    }
 }
 
 .card__box_items {
-    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     max-width: 900px;
-    width: 100%;
+    width: 97%;
     padding: 40px;
     border-radius: 20px;
     display: flex;
@@ -43,6 +50,30 @@ body {
     column-gap: 100px;
     overflow: hidden;
 
+    &.cardImgZoom {
+        max-width: 100%;
+        width: 100%;
+        transition: .2s ease;
+        overflow: visible;
+
+        &::after {
+            display: none;
+        }
+
+        &::before {
+            display: none;
+        }
+
+        .info__item {
+            display: none;
+        }
+
+        .image__item {
+            max-width: 100%;
+            margin: 0 auto;
+        }
+    }
+
     &::before {
         content: "";
         position: absolute;
@@ -50,7 +81,7 @@ body {
         transform: translateX(-50%);
         width: 250px;
         height: 250%;
-        background: linear-gradient(rgb(147, 255, 250), rgb(149, 255, 149));
+        background: linear-gradient(rgb(217, 255, 0), rgb(0, 225, 255));
         animation: anime 7s linear infinite;
     }
 
@@ -58,6 +89,7 @@ body {
         0% {
             transform: rotate(0);
         }
+
         100% {
             transform: rotate(360deg);
         }
@@ -74,12 +106,33 @@ body {
     .image__item {
         max-width: 280px;
         text-align: center;
-        z-index: 50;
+        z-index: 500;
 
-        img {
+        .userImage {
             width: 100%;
             border-radius: 50%;
-            border: 3px solid rgb(73, 197, 255);
+            border: 3px solid rgb(0, 233, 39);
+            padding: 5px;
+            cursor: pointer;
+            transition: .2s ease;
+
+            &:hover {
+                background-blend-mode: darken;
+                background-color: rgba(255, 255, 255, 0.205);
+            }
+
+            &::selection {
+                background-color: transparent;
+            }
+
+            &.userImgZoom {
+                top: 0;
+                left: 0;
+                border: none;
+                border-radius: 10px;
+                background: none;
+                cursor: auto;
+            }
         }
     }
 
@@ -99,9 +152,11 @@ body {
 
         .profession {
             font-size: 17px;
-            color: rgba(230, 230, 230, 0.877);
+            color: rgba(241, 241, 241, 0.877);
             font-weight: 300;
+            letter-spacing: 1px;
         }
+
         .about__text {
             margin-top: 30px;
             font-size: 17px;
@@ -115,6 +170,7 @@ body {
             text-align: start;
             color: rgb(211, 211, 211);
             font-size: 17px;
+
             .mail_icon {
                 color: rgb(211, 211, 211);
                 margin-right: 5px;
@@ -127,6 +183,7 @@ body {
 
             .social_icons {
                 display: flex;
+
                 a {
                     font-size: 22px;
                     margin: 30px 5px;
@@ -141,12 +198,14 @@ body {
                     transition: 0.2s ease;
 
                     &:hover {
-                        border: 1px solid rgb(255, 255, 255);
+                        border: 1px solid rgb(0, 233, 39);
                     }
 
-                    &:nth-child(6) {
-                        img{
-                            width: 23px;
+                    img {
+                        width: 23px;
+
+                        &::selection {
+                            background-color: transparent;
                         }
                     }
                 }
@@ -154,81 +213,88 @@ body {
         }
     }
 }
-/* ================== media queries for responsive ==================== */
 
+/* ================== media queries for responsive ==================== */
 @media screen and (max-width: 850px) {
     .card__box_items {
         flex-direction: column;
+
+        &.cardImgZoom {
+            flex-direction: row;
+        }
+
+        .image__item {
+            max-width: 170px;
+
+            .info__item {
+
+                .social__pages {
+                    margin-top: 30px;
+                }
+            }
+        }
 
         &::before {
             position: absolute;
             top: -73%;
             left: 30%;
             transform: translateX(-50%);
-            background: linear-gradient(rgb(38, 255, 244),rgb(0, 80, 145));
+            background: linear-gradient(rgb(149, 255, 158), rgb(132, 241, 255));
         }
+    }
 
-        .image__item {
-            max-width: 170px;
-        }
-        .info__item {
-            margin-top: 30px;
+    @media screen and (max-width: 450px) {
+        .card__box_items {
+            &::before {
+                width: 150px;
+            }
 
-            .social__pages {
-                margin-top: 30px;
+            .info__item {
+                .name {
+                    font-size: 20px;
+                    line-height: 24px;
+                }
+
+                .about_title {
+                    font-size: 25px;
+                }
+
+                .about__text {
+                    font-size: 15px;
+                }
+
+                .mail {
+                    font-size: 14px;
+                }
+
+                .social__pages {
+                    margin-top: 30px;
+                }
+            }
+
+            .image__item {
+                .profession {
+                    font-size: 14px;
+                    margin-top: 5px;
+                }
             }
         }
     }
-}
 
-@media screen and (max-width: 450px) {
-    .card__box_items {
-        &::before {
-            width: 150px;
-        }
-        .info__item {
-            .name {
-                font-size: 20px;
-                line-height: 24px;
-            }
-            .about_title {
-                font-size: 25px;
-            }
-            .about__text {
-                font-size: 15px;
-            }
+    @media screen and (max-width: 420px) {
+        .card__box_items {
+            .info__item {
+                .social__pages {
+                    .social_icons {
+                        a {
+                            font-size: 18px;
+                            width: 30px;
+                            height: 30px;
 
-            .mail {
-                font-size: 14px;
-            }
-
-            .social__pages {
-                margin-top: 30px;
-            }
-        }
-
-        .image__item {
-            .profession {
-                font-size: 14px;
-                margin-top: 5px;
-            }
-        }
-    }
-}
-
-@media screen and (max-width: 420px) {
-    .card__box_items {
-        .info__item {
-            .social__pages {
-                .social_icons {
-                    a {
-                        font-size: 18px;
-                        width: 30px;
-                        height: 30px;
-
-                        &:nth-child(6) {
-                            img{
-                                width: 18px;
+                            &:nth-child(6) {
+                                img {
+                                    width: 18px;
+                                }
                             }
                         }
                     }
@@ -236,21 +302,21 @@ body {
             }
         }
     }
-}
 
-@media screen and (max-width: 390px) {
-    .card__box_items {
-        padding: 10px;
-    }
+    @media screen and (max-width: 390px) {
+        .card__box_items {
+            padding: 40px 10px;
+        }
 
-    .card__box_items {
-        .info__item {
-            .social__pages {
-                .social_icons {
-                    a {
-                        font-size: 18px;
-                        width: 30px;
-                        height: 30px;
+        .card__box_items {
+            .info__item {
+                .social__pages {
+                    .social_icons {
+                        a {
+                            font-size: 18px;
+                            width: 30px;
+                            height: 30px;
+                        }
                     }
                 }
             }
