added telephone number function

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -176,6 +176,10 @@ body {
             text-shadow: 2px 2px 3px rgb(0, 0, 0);
             gap: 0 10px;
             margin-top: 10px;
+
+            .phone {
+                color: #ffffff;
+            }
         }
     }
 }
